Sat Oct  8 02:48:28 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>

	* regression/tests_pass/operator_precedence.s: Add.
	* regression/tests_pass/operator_shift.s: Added :ASR: test.
	* code.c (Code_EvalLowest,codePrint): Follow OperatorAsStr to
	Lex_OperatorAsStr rename. Follow isUnop to IsUnop rename.
	* expr.c (expr,exprBuild): Use kPrioOp_Min and kPrioOp_Max.
	* lexAcorn.c: Use kPrioOp_* values.
	(lexAcornBinop): Add support for :ASR:.
	* eval.c (evalBinop): Add support for :LEOR: as Op_leor.
	* lex.c (Pri): Remove.
	Use kPrioOp_* values.
	(OperatorAsStr): Rename to Lex_OperatorAsStr.  Follow Op_* reshuffle.
	(lexPrint): Follow Lex00Label removal.
	* lex.h (Operator): Reshuffle according to precedence.  Add Op_leor.
	(kPrioOp_*): Define.
	(isUnop): Rename to IsUnop and turns this into an inline.
	(LexTag): Remove Lex00Label.
	(Lex): Remove Label.

Wed Oct  5 00:46:48 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>

	* local.h (kIntLabelPrefix): Move to...
	* symbol.h: ...here.
	* local.c (routPos, rout_null, routList, routListEnd): Rename to
	RoutPos_t, oRout_Null, oRout_List, oRout_ListEnd.
	(Local_ROUTLblNo): Remove.
	(oLocal_LabelNum): Add.
	(Local_ResetLabels): Add.
	(Local_PrepareForPhase, c_rout): Make use of Local_ResetLabels.
	(Local_GetLabel): Add.
	* local.h (Local_Label_t, Local_GetLabel): Add.
	(Local_ROUTLblNo): Remove.
	* lex.c (Lex_ReadLocalLabel): Support bigger label numbers.
	(Lex_GetDefiningLabel, Lex_MakeLocalLabel): Use Local_GetLabel.

Tue Oct  4 21:42:10 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>

	* lit.c (Lit_RegisterInt): Fix Value free problem.

Mon Oct  3 21:45:10 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>
  
	* macros.h (MACRO_ARG_LIMIT): Increased to 18.
	(MACRO_ARG0): Changed from 16 to 14.
	(MACRO_ARG15): Removed.
	* macros.C (Macro_GetLine): Follow MACRO_ARG15 removal.

Fri Sep 30 01:56:17 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>

	* filestack.h (PObject::lastLineSize): Added.